--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
             name="email"
             id="email"
             type="email"
-            placeholder="Enter your email address"
+            placeholder="Enter your Email Address"
             required
           />
           <input id="submit" type="submit" value="Get Started" class="btn" />
