--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   </head>
   <body>
     <div id="page-wrapper">
@@ -62,7 +58,7 @@
             <div class="desc">
               <h2>Fast Shipping</h2>
               <p>
-                We make sure you recieve your trombone as soon as we have
+                We make sure you receive your trombone as soon as we have
                 finished making it. We also provide free returns if you are not
                 satisfied.
               </p>
@@ -132,7 +128,7 @@
             <li><a href="#">Terms</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
-          <span>Copyright 2016, Original Trombones</span>
+          <span>Copyright 2023, Original Trombones</span>
         </footer>
       </div>
     </div>
